# gearcrew-agno

./: .env.example  .gitignore  .mcp.json  AGENTS.md  PRD.md  README.md  geargraph_ontology.ttl  llms.txt  main.py  monitor_playlist.py  prompts-lock.json  prompts.json  pyproject.toml  run_monitor.sh  run_streamlit.sh  streamlit_app.py  sync_tracking_from_db.py
.github/workflows/: monitor-playlist.yml
app/: __init__.py  agent.py  enrichment_agent.py  main.py  task_queue.py
app/db/: __init__.py  memgraph.py
app/hygiene/: __init__.py  auto_fixer.py  check_handlers.py  checklist.py  hygiene_agent.py  issues.py  logbook.py  metrics.py  priority_queue.py  scanner.py  validator.py
app/models/: __init__.py  gear.py
app/monitoring/: __init__.py  notifier.py  pipeline.py  tracker.py
app/tools/: __init__.py  browser_scraper.py  firebase_sync.py  firecrawl_scraper.py  geargraph.py  geargraph_sync_client.py  lighterpack.py  lighterpack_importer.py  product_family_detector.py  product_verifier.py  site_analyzer.py  site_patterns.py  smart_firecrawl.py  web_scraper.py  youtube.py
app/ui/: __init__.py  archive_view.py  data_fixer.py  enrichment_view.py  family_fix_handler.py  firebase_sync_view.py  fix_handlers.py  graph_explorer.py  graph_queries.py  hygiene_agent_ui.py  hygiene_queue.py  manufacturer_catalog.py  playlist_manager.py  website_extractor.py
data/: processed_videos.json
docs/: PLAYLIST_MONITORING.md
prompts/: gear-extractor.prompt.yaml  hygiene-evaluator.prompt.yaml
scripts/: import_glossary.py
tests/: __init__.py  conftest.py
(+9 files in other folders)
